# prediccion-ingresos-docker

./: Dockerfile  README.md  pyproject.toml
api/: api.py
app/: app.py
